--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/cli-plugin-typescript": "~5.0.0",
     "vite": "^4.3.9"
   }
 }
