--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "pinia": "^2.1.4",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-material": "^1.0.0-beta-16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
